--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,18 @@
 #release configuration
-#Fri Oct 07 12:20:08 EDT 2022
+#Fri Oct 07 12:21:24 EDT 2022
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
+project.rel.com.brihaspathee.zeus\:transaction-manager=0.0.1
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=check-poms
+project.scm.com.brihaspathee.zeus\:transaction-manager.tag=transaction-manager-0.0.1
+completedPhase=generate-release-poms
 scm.url=scm\:git\:git@github.com\:Zeus-2-0/transaction-manager.git
+project.scm.com.brihaspathee.zeus\:transaction-manager.url=scm\:git\:http\://github.com/Zeus-2-0/transaction-manager
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+project.scm.com.brihaspathee.zeus\:transaction-manager.developerConnection=scm\:git\:git@github.com\:Zeus-2-0/transaction-manager.git
+project.scm.com.brihaspathee.zeus\:transaction-manager.connection=scm\:git\:git\://github.com/Zeus-2-0/transaction-manager.git
+project.dev.com.brihaspathee.zeus\:transaction-manager=0.0.2-SNAPSHOT
+scm.tag=transaction-manager-0.0.1
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
