--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -4,8 +4,8 @@ spring:
       enabled: true
   datasource:
     url: jdbc:h2:mem:transactionmanagertestdb
-  #flyway:
-  #  enabled: false
+  flyway:
+    enabled: false
   jpa:
     defer-datasource-initialization: true
     properties:
