ZEUS-303 udpated code to get member rate from catalog

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,9 @@
 zeus-transaction-manager:
   api:
     version: 1.0.0
+url:
+  host:
+    plan-catalog: http://localhost:9002/api/v1
 server:
   port: 8095
 spring:
